* Added rudimentary STL saveout functionality.